# ChangeLog for www-plugins/gecko-mediaplayer
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.51 2011/07/12 15:02:00 tomka Exp $

  12 Jul 2011; Thomas Kahle <tomka@gentoo.org>
  gecko-mediaplayer-1.0.3-r1.ebuild:
  x86 stable per bug 367091

*gecko-mediaplayer-1.0.4 (04 Jul 2011)

  04 Jul 2011; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-1.0.4.ebuild:
  Version bump.

  21 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  gecko-mediaplayer-1.0.3-r1.ebuild:
  Stable on amd64 wrt bug #367091

  14 May 2011; Samuli Suominen <ssuominen@gentoo.org>
  gecko-mediaplayer-1.0.3-r1.ebuild:
  Block www-client/chromium wrt #366695 by Jouni Rinne.

*gecko-mediaplayer-1.0.3-r1 (23 Apr 2011)

  23 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-1.0.3-r1.ebuild:
  Stop using gnome2.eclass and remove support for gnome-base/gconf wrt #364513.

*gecko-mediaplayer-1.0.3 (22 Apr 2011)

  22 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-1.0.3.ebuild:
  Version bump.

  22 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  gecko-mediaplayer-1.0.0.ebuild:
  ppc64 stable wrt #346187

  22 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  gecko-mediaplayer-1.0.0.ebuild:
  Fix compability with net-libs/xulrunner >= 2.

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org>
  gecko-mediaplayer-1.0.0.ebuild:
  alpha stable wrt #346187

  14 Jan 2011; Brent Baude <ranger@gentoo.org>
  gecko-mediaplayer-1.0.0.ebuild:
  stable ppc, bug 346187

  01 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  gecko-mediaplayer-1.0.0.ebuild:
  Stable on amd64 wrt bug #346187

  27 Dec 2010; Thomas Kahle <tomka@gentoo.org> gecko-mediaplayer-1.0.0.ebuild:
  x86 stable per bug 346187

*gecko-mediaplayer-1.0.0 (06 Nov 2010)

  06 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  +gecko-mediaplayer-1.0.0.ebuild:
  Version bump.
