@@ -1,9 +1,11 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/Attic/gecko-mediaplayer-1.0.4.ebuild,v 1.1 2011/07/04 14:15:54 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/Attic/gecko-mediaplayer-1.0.4.ebuild,v 1.2 2011/09/13 14:05:38 ssuominen Exp $
 
 EAPI=4
 inherit multilib nsplugins
+
+_fxver=6.0
 
 DESCRIPTION="A browser plugin that uses GNOME MPlayer"
 HOMEPAGE="http://code.google.com/p/gecko-mediaplayer/"
@@ -18,7 +20,7 @@ RDEPEND=">=dev-libs/dbus-glib-0.92
 	>=dev-libs/glib-2.26:2
 	dev-libs/nspr
 	>=media-video/gnome-mplayer-1.0.4[dbus]
-	>=net-libs/xulrunner-1.9.2:1.9
+	|| ( >=www-client/firefox-${_fxver} >=net-libs/xulrunner-1.9.2:1.9 )
 	curl? ( net-misc/curl )
 	!www-client/chromium"
 DEPEND="${RDEPEND}
@@ -28,6 +30,8 @@ DEPEND="${RDEPEND}
 DOCS="ChangeLog DOCS/tech/javascript.txt"
 
 src_configure() {
+	has_version ">=www-client/firefox-${_fxver}" && export PKG_CONFIG_PATH="${FILESDIR}"
+
 	econf \
 		--without-gconf \
 		--with-gio \
