@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/gecko-mediaplayer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.51 2011/07/12 15:02:00 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/gecko-mediaplayer/ChangeLog,v 1.52 2011/09/13 14:05:38 ssuominen Exp $
+
+  13 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
+  gecko-mediaplayer-1.0.4.ebuild, +files/libxul.pc:
+  Ship a copy of custom libxul.pc in order to use Firefox 6.0 headers.
 
   12 Jul 2011; Thomas Kahle <tomka@gentoo.org>
   gecko-mediaplayer-1.0.3-r1.ebuild:
